mule-user-guide/v/3.4/soap-web-service-security-example.adoc
=  SOAP Web服务安全示例
:keywords: soap, security

*_Enterprise Edition, CloudHub_*

此示例演示如何将不同级别的安全性应用于SOAP Web服务。

====  Web服务安全性

{0}}当Web服务向外部世界公开私有网络数据时，数据通过4-7个单独的协议层（参见： http://en.wikipedia.org/wiki/TCP/IP_model[TCP / IP]或 http://en.wikipedia.org/wiki/OSI_model[OSI]）传播，从而引发潜在的安全漏洞。例如，在协议栈上的较高层实现安全性（例如应用层）通常提供比在较低传输层（仅提供HTTPS安全性）的实现更好的保护。

要实现应用程序层安全性，请在Web服务上启用 http://msdn.microsoft.com/en-us/library/ms977327.aspx[WS-安全]（ http://cxf.apache.org/[CXF]配置）。 WS-security定义了一个新的SOAP头，它能够携带各种安全令牌，系统用它来识别Web服务调用者的身份和特权。

== 假设

本文档在Mule ESB的图形用户界面（GUI）*Mule Studio*的上下文中描述了示例的细节。在适当的情况下，XML配置在可扩展部分的Studio界面屏幕截图之后。

本文档假定您熟悉Mule ESB和 link:/anypoint-studio/v/5/index[Mule Studio界面]。为提高您对Mule Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/5/basic-studio-tutorial[Mule Studio教程]。

== 示例用例

示例应用程序对其公开的SOAP服务的六个变体中的五个应用了不同的安全措施（第六个是不安全的）。每个变体都通过Web浏览器接受最终用户的称呼请求，然后用个性化问候语进行响应。例如，当用户将他的名字“John”提交给六个变体中的一个时，他收到的响应是`Hello John`。下表列出了WS-Security示例应用程序中的六个变体，安全性Mule适用于每个变体。

[%header,cols="34,33,33"]
|===
| Web服务名称 |安全类型 |描述
| UnsecureServiceFlow  |无 |处理所有请求。
| UsernameTokenServiceFlow  | UsernameToken  |使用有效的用户名和密码处理请求。
| UsernameTokenSignedServiceFlow  | UsernameToken +签名 |使用有效的用户名和密码以及有效的数字签名处理请求。
| UsernameTokenEncryptionServiceFlow  | UsernameToken +加密 |使用有效的用户名和密码处理加密的请求。
| SamlTokenServiceFlow  | SAML2  |结合身份提供程序处理请求以验证邮件安全性。
| SignedSamlTokenServiceFlow  | SAML2 +签名 |使用有效数字签名与身份提供程序一起处理请求以验证邮件安全性。
|===

此应用程序还包含*client-side Web service*的多种变体以确保功能性示例。这些*service-clients*使最终用户能够向服务器端Web服务提交称呼请求。请参阅下面的<<Client-Side Flows>>部分了解更多详情。

本文档将帮助您了解在Mule ESB应用程序中将安全性应用于SOAP Web服务的一些方法。

== 设置并运行示例

与此WS-Security示例一样，您可以直接在*Mule Studio*或*Mule Standlone*（没有Studio的Mule ESB）中创建模板应用程序。您可以调整这些基于用例的模板的配置，以在Mule中创建您自己的自定义应用程序。

按照以下过程创建，然后在Mule ESB中运行WS-Security示例应用程序。

. 创建，然后在Mule Studio中运行示例应用程序。
. 打开您的Web浏览器。
. 在地址栏中，键入`localhost:63080/client?clientType=unsecure&name=John`
. 按*enter*以从WS-Security应用程序中引发响应（请参阅下图）。
+
image:first_response.png[first_response] +

. 调整网址以将`John`中的*name*更改为您的姓名，然后按*enter*以从应用程序中引发新的响应。
. 将*clientType*参数从`unsecure`调整为以下五种类型中的任何一种（注意每种类型都区分大小写）：+
*  `usernameToken`
*  `usernameTokenSigned`
*  `usernameTokenEncrypted`
*  `samlToken`
*  `samlTokenSigned`
. 按*enter*从应用程序中引发新的响应（请参阅下面的示例）。 +
+
image:second_response.png[second_response]

无论您用于提交请求的*clientType*，Mule都会返回相同的回复。 Mule用于处理消息的安全类型并未反映在消息的内容中，因此即使Mule以不同方式处理每个请求，响应的内容仍保持不变。

==== 备选设置

您可以通过Mule Studio中的*SecureClient* java类提交最终用户请求，而不是通过Web浏览器与应用程序交互。

. 完成创建过程，然后运行Mule Studio中的安全模板或Mule Standalone中的安全示例（不带Studio的Mule ESB）。
. 在*Package Explorer*中，导航至`src/main/java`，然后展开`com.mulesoft.mule.example.security`文件夹以显示`SecureClient`文件。 +
+
image:secure_client.png[secure_client] +

. 右键点击`SecureClient`文件，然后选择*Run As*> *Java Application*。
. 在*Console*中，Mule显示一个菜单，其中列出了可以提交给WS-Security应用程序的不同类型的请求。 +
 +
image:console.png[安慰] +

. 点击列表中最后一行`q. Quit`的下方，在控制台窗格中激活您的光标。
. 在最后一行下方键入`2`，然后按*enter*将带有用户名令牌安全性的请求提交给WS-Security应用程序。
.  Mule处理请求，并在控制台窗格中返回响应`Hello Mule`。 +
+
image:response.png[响应] +

.  Mule再次在控制台中显示相同的请求提交选项菜单。在最后一个列表项目下方键入另一个号码1-9，然后按*enter*。
.  Mule处理请求，并在控制台窗格中返回响应`Hello Mule`。
. 如果您希望终止Java应用程序，请键入`q`，然后按*enter*。 +

== 它是如何工作的

此示例应用程序由多个 link:/mule-user-guide/v/3.4/mule-application-architecture[流量和子流量]组成。这些流程中的每一个暴露了处理最终用户请求的相同Web服务的变体。这些流程之间唯一的区别在于每种应用的Web服务安全类型。

以下部分提供了WS-Security应用程序在处理最终用户请求时的操作的逐流描述。本文档中每个流程的Web服务变体比前一个流程更安全。

===  UnsecureService流

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:unsecureService.png[unsecureService]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<flow name="UnsecureServiceFlow" doc:name="UnsecureServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/unsecure" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Unsecure service"/>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service" />
    </flow>
----
....
------

当最终用户提交`unsecure`称呼请求时，Web服务客户端会将简单的SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UnsecureService*流。

[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Body>
        <ns2:greet xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>John</name>
        </ns2:greet>
    </soap:Body>
</soap:Envelope>
----

此流程中的请求 - 响应**{{0}} **接收最终用户请求。由于它具有双向消息交换模式，因此此HTTP端点负责接收和返回消息。

JAX-WS服务中，此流程中的**{{0}}**将根据其安全配置来评估消息。在这种情况下，Web服务是不安全的（见下图），所以SOAP组件会处理它收到的所有请求。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:SOAP_Component1.png[SOAP_Component1]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Unsecure service"/> 
----
....
------

link:/mule-user-guide/v/3.4/java-component-reference[Java组件]执行一个简单的脚本为最终用户准备个性化的称呼。

[TIP]
====
*Where is the Java code?*

要访问*Mule Studio*中的Java代码，请导航到*Package Explorer*中的源文件。

*Find the Java*

. 在您的WS-Security项目中，导航至`src/main/java`> `com.mulesoft.mule.example.security`。
. 双击`Greeter.java`文件，在Studio画布上的新标签中打开它（请参阅下图）。 +

+
image:greeter.png[招待员]
+

要访问*Mule Standalone*中的Java代码，请导航到本地驱动器上示例文件夹中的源文件。

. 导航到本地驱动器上的Mule Standalone文件夹。
. 导航到`examples`> `security`> `src` `main` `java` `com` { {8}}> `example`> `security`。
. 双击打开`Greeter.java`文件。
====

最后，HTTP端点向客户端返回一个简单的SOAP响应（见下文）。

[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Body>
        <ns2:greetResponse xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>Hello John</name>
        </ns2:greetResponse>
    </soap:Body>
</soap:Envelope>
----

===  UsernameTokenService流

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:usernameTokenService.png[usernameTokenService]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
----
....
------

当最终用户提交`usernameToken`称呼请求时，Web服务客户端会将SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UsernameTokenService*流。

*View the SOAP Request Message*

[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Header>
        <wsse:Security xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                       xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
                       soap:mustUnderstand="1">
            <wsu:Timestamp wsu:Id="TS-2">
                <wsu:Created>2012-08-29T02:58:29.834Z</wsu:Created>
                <wsu:Expires>2012-08-29T03:03:29.834Z</wsu:Expires>
            </wsu:Timestamp>
            <wsse:UsernameToken wsu:Id="UsernameToken-1">
                <wsse:Username>joe</wsse:Username>
                <wsse:Password
                        Type="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#PasswordDigest">
                    q0JPIhBbzqsE7dz71CoUjzBJbxs=
                </wsse:Password>
                <wsse:Nonce
                        EncodingType="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary">
                    hdSN3eeqCZxr4huNcRTG+A==
                </wsse:Nonce>
                <wsu:Created>2012-08-29T02:58:29.831Z</wsu:Created>
            </wsse:UsernameToken>
        </wsse:Security>
    </soap:Header>
    <soap:Body>
        <ns2:greet xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>John</name>
        </ns2:greet>
    </soap:Body>
</soap:Envelope>
----

与UnsecureService流程一样，此流程使用HTTP端点接收请求，并使用SOAP组件处理消息。然而，在这种情况下，SOAP组件的配置指定了*action*，这是Mule验证消息的WS安全特性列表。该组件的UsernameToken规范验证以下内容：

* 用户名和密码 - 确认客户端的用户名和密码有效
* 时间戳 - 验证邮件是不是陈旧

[tabs]
------
[tab,title="Studio Visual Editor"]
....

image:usernameTokenSOAP.png[usernameTokenSOAP]

....
[tab,title="Studio XML Editor or Standalone"]
....

[source, xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
----
....
------

[NOTE]
====
*Username and password?*

为演示一个功能性示例，WS-Security应用程序包括几个向*server-side flows*提供安全信息的*client-side flows*。

通常，独立Web服务客户端向Web服务提供者提供最终用户安全信息，例如*username*和*password*。但是，在这种情况下，Mule会在其*service-clients*流中生成此信息来模拟安全的请求提交。

有关更多详细信息，请参阅下面的<<Client-Side Flows>>部分。
====

接下来，Java组件执行一个简单的脚本为最终用户准备个性化的称呼。最后，HTTP端点向客户端返回一个简单的SOAP响应。

===  UsernameTokenSignedService流
[tabs]
------
[tab,title="Studio Visual Editor"]
....

image:usernameTokenSigned.png[usernameTokenSigned]

....
[tab,title="Studio XML Editor or Standalone"]
....

[source, xml, linenums]
----
<flow name="UsernameTokenSignedServiceFlow" doc:name="UsernameTokenSignedServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/signed" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
----

....
------

该流程验证消息的数字签名。带有数字签名的消息（除用户名，密码和时间戳外）比没有消息时更安全。

当最终用户提交`usernameTokenSigned`称呼请求时，Web服务客户端会将SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UsernameTokenSignedService*流。

*View the SOAP Request Message*

[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Header>
        <wsse:Security xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                       xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
                       soap:mustUnderstand="1">
            <wsu:Timestamp wsu:Id="TS-12">
                <wsu:Created>2012-08-29T03:24:26.100Z</wsu:Created>
                <wsu:Expires>2012-08-29T03:29:26.100Z</wsu:Expires>
            </wsu:Timestamp>
            <ds:Signature xmlns:ds="http://www.w3.org/2000/09/xmldsig#" Id="SIG-11">
                <ds:SignedInfo>
                    <ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#">
                        <ec:InclusiveNamespaces xmlns:ec="http://www.w3.org/2001/10/xml-exc-c14n#" PrefixList="soap"/>
                    </ds:CanonicalizationMethod>
                    <ds:SignatureMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/>
                    <ds:Reference URI="#id-10">
                        <ds:Transforms>
                            <ds:Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#">
                                <ec:InclusiveNamespaces xmlns:ec="http://www.w3.org/2001/10/xml-exc-c14n#"
                                                        PrefixList=""/>
                            </ds:Transform>
                        </ds:Transforms>
                        <ds:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/>
                        <ds:DigestValue>CPmeTSkR/UjaGQfTqNLXHQXOPGU=</ds:DigestValue>
                    </ds:Reference>
                </ds:SignedInfo>
                <ds:SignatureValue>Tjdon+T59I9YMI+hDwXWHWT1mIwf0LS1ZpzB57KB3aM7+XebbHKtKjbEnughtDDHEW7gfAvcBS9H
                    goXeqI8lCu7HqRixX0LPrkpUKW1FUbjl0zQLOrI1quPS557TABKpfEKbu1wwoZQTyVOWjs1+R8qU
                    CXsJsT+iL4UVQrbMVNg=
                </ds:SignatureValue>
                <ds:KeyInfo Id="KI-E847A979F41D3E818513462106660948">
                    <wsse:SecurityTokenReference wsu:Id="STR-E847A979F41D3E818513462106660949">
                        <ds:X509Data>
                            <ds:X509IssuerSerial>
                                <ds:X509IssuerName>CN=joe,OU=joe,O=joe,L=joe,ST=joe,C=US</ds:X509IssuerName>
                                <ds:X509SerialNumber>1262035674</ds:X509SerialNumber>
                            </ds:X509IssuerSerial>
                        </ds:X509Data>
                    </wsse:SecurityTokenReference>
                </ds:KeyInfo>
            </ds:Signature>
            <wsse:UsernameToken wsu:Id="UsernameToken-9">
                <wsse:Username>joe</wsse:Username>
                <wsse:Password
                        Type="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#PasswordDigest">
                    vzL3k/289R5JFREMIFBPAyDbe6c=
                </wsse:Password>
                <wsse:Nonce
                        EncodingType="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary">
                    I+dSbnJQoYzktN+RuF8DLQ==
                </wsse:Nonce>
                <wsu:Created>2012-08-29T03:24:26.093Z</wsu:Created>
            </wsse:UsernameToken>
        </wsse:Security>
    </soap:Header>
    <soap:Body xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
               wsu:Id="id-10">
        <ns2:greet xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>John</name>
        </ns2:greet>
    </soap:Body>
</soap:Envelope>
----

*UsernameTokenService*和*UsernameTokenSignedService*流之间的唯一区别是SOAP组件的配置。在这个流程中，组件包括一个签名动作*signaturePropFile*（见下图），Mule用它来验证数字签名。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

image:properties_secureTokensigned.png[properties_secureTokensigned]

....
[tab,title="Studio XML Editor or Standalone"]
....

[source, xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
----

....
------

*signaturePropFile*属性指定Mule必须验证消息上的数字签名的密钥库。包含安全证书的存储库*keystore*驻留在应用程序中嵌入的*wssecurity.properties*文件中。

[NOTE]
====
*Where is the wssecurity.properties File?* +

要在Studio中访问*wssecurity.properties*文件，请导航至*Package Explorer*中的源文件。

. 在您的WS-Security项目中，导航到`src/main/resources`。
. 双击`wssecurity.properties`文件，在Studio画布上的新标签中打开它（请参阅下图）。
+
image:ws_security_properties.png[ws_security_properties]
====

*wssecurity.properties*文件包含以下属性：

*  `org.apache.ws.security.crypto.merlin.file=keystore.jks`
*  `org.apache.ws.security.crypto.merlin.keystore.password=keyStorePassword`

为了验证数字签名，Mule使用Java keytool命令来验证密钥库中是否存在用户`joe`的证书（请参阅下图）。
+
image:keystore.png[密钥库]

[NOTE]
请注意，此示例证书是自签名的（即`Owner`和`Issuer`是同一个实体）。通常，受信任的第三方`Issuer`（例如VeriSign）颁发证书。

===  UsernameTokenEncryptedService流


image:UsernameTokenEncrypted.png[UsernameTokenEncrypted]

[source, xml, linenums]
----
<flow name="UsernameTokenEncryptedServiceFlow" doc:name="UsernameTokenEncryptedServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/encrypted" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Encrypted service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp Encrypt"/>
                    <cxf:property key="decryptionPropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
----

在前面的流程中，SOAP消息的头部包含了所有消息的安全信息，消息的主体是完全透明的。该流程不仅使用SOAP头中的所有安全信息验证所有消息，还解密消息正文中的加密内容。具有加密主体的消息比具有未加密内容的消息更安全。

当最终用户提交`usernameTokenEncrypted`称呼请求时，Web服务客户端会将SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UsernameTokenEncryptedService*流。

*The SOAP Request Message*

[source, xml, linenums]
----
<soap:Body>
        <xenc:EncryptedData xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" Id="ED-15"
                            Type="http://www.w3.org/2001/04/xmlenc#Content">
            <xenc:EncryptionMethod xmlns:xenc="http://www.w3.org/2001/04/xmlenc#"
                                   Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc"/>
            <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
                <wsse:SecurityTokenReference
                        xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                        xmlns:wsse11="http://docs.oasis-open.org/wss/oasis-wss-wssecurity-secext-1.1.xsd"
                        wsse11:TokenType="http://docs.oasis-open.org/wss/oasis-wss-soap-message-security-1.1#EncryptedKey">
                    <wsse:Reference URI="#EK-E847A979F41D3E8185134621148888310"/>
                </wsse:SecurityTokenReference>
            </ds:KeyInfo>
            <xenc:CipherData xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
                <xenc:CipherValue xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
                    LcdVnOdPMSLvqSvqWZxojAT9MKDs5Qq2MmXafeqIb+h8LYQFvXV0Und2E6eyXp+ZxYVz+E3UdfEH
                    BvsbguT8y4MelnAagYGJl6MushFPOQ0ZRr0ZiuOkLbJlMloFFWz6jDEWekLngm84uAKu1vy37PMW
                    fXBkWFWC30fjVXk3pW8mkDXShiWaI+0a1j9qCJJMg81UwtI1xV0+0DSxs7wyQXLNjdc8ixfqLahW
                    y4wZR9g=
                </xenc:CipherValue>
            </xenc:CipherData>
        </xenc:EncryptedData>
    </soap:Body>
----

在此流程中，SOAP组件必须在解密SOAP消息正文之前验证用户名，密码，时间戳和数字签名。 Mule使用密钥库来执行解密。
