mule-user-guide/v/3.5/soap-web-service-security-example.adoc
=  SOAP Web服务安全示例

*_Enterprise Edition, CloudHub_*

此示例演示如何将不同级别的安全性应用于SOAP Web服务。

====  Web服务安全性

当Web服务将私有网络数据公开给外部世界时，该数据通过四个到七个单独的协议层（参见： http://en.wikipedia.org/wiki/TCP/IP_model[TCP / IP]或 http://en.wikipedia.org/wiki/OSI_model[OSI]）传播，因此引入了潜在的安全漏洞。例如，在协议栈上的较高层实现安全性（例如应用层）通常提供比在较低传输层（仅提供HTTPS安全性）的实现更好的保护。

要实现应用程序层安全性，请在Web服务上启用 http://msdn.microsoft.com/en-us/library/ms977327.aspx[WS-安全]（ http://cxf.apache.org/[CXF]配置）。 WS-security定义了一个新的SOAP头，它能够携带各种安全令牌，系统用它来识别Web服务调用者的身份和特权。

== 假设

本文档描述了Anypoint™Studio环境下的示例细节。在适当的情况下，XML配置在可扩展部分的Studio界面屏幕截图之后。

本文档假定您熟悉Mule Runtime和 link:/anypoint-studio/v/5/basic-studio-tutorial[Anypoint Studio界面]。要提高您对Anypoint Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/5/basic-studio-tutorial[Anypoint Studio教程]。

== 示例用例

示例应用程序对其公开的SOAP服务的六个变体中的五个应用了不同的安全措施（第六个是不安全的）。每个变体都通过Web浏览器接受最终用户的称呼请求，然后用个性化问候语进行响应。例如，当用户将他的名字“John”提交给六个变体中的一个时，他收到的响应是`Hello John`。下表列出了WS-Security示例应用程序中的六个变体，安全性Mule适用于每个变体。

[%header,cols="34,33,33"]
|===
| Web服务名称 |安全类型 |描述
| UnsecureServiceFlow  |无 |处理所有请求。
| UsernameTokenServiceFlow  | UsernameToken  |使用有效的用户名和密码处理请求。
| UsernameTokenSignedServiceFlow  | UsernameToken +签名 |使用有效的用户名和密码以及有效的数字签名处理请求。
| UsernameTokenEncryptionServiceFlow  | UsernameToken +加密 |使用有效的用户名和密码处理加密的请求。
| SamlTokenServiceFlow  | SAML2  |结合身份提供程序处理请求以验证邮件安全性。
| SignedSamlTokenServiceFlow  | SAML2 +签名 |使用有效数字签名与身份提供程序一起处理请求以验证邮件安全性。
|===

此应用程序还包含*client-side Web service*的多种变体以确保功能性示例。这些*service-clients*使最终用户能够向服务器端Web服务提交称呼请求。请参阅下面的<<Client-Side Flows>>部分了解更多详情。

本文档帮助您了解在Mule ESB应用程序中将安全性应用于SOAP Web服务的一些方法。要更多地了解Mule ESB整合服务和系统的能力，请访问 link:/mule-user-guide/v/3.5/mule-examples[骡子的例子]并查看其他正在运行的应用程序。

== 设置并运行示例

您可以直接在*Anypoint Studio*或*Mule Standlone*（没有Studio的Mule ESB）中创建模板应用程序。您可以调整这些基于用例的模板的配置，以在Mule中创建您自己的自定义应用程序。

按照以下过程创建，然后运行WS-Security示例应用程序。

.  link:/mule-user-guide/v/3.5/mule-examples[*创建，然后运行*] Anypoint Studio或Standalone中的示例应用程序。
. 打开您的Web浏览器。
. 在地址栏中，键入`localhost:63080/client?clientType=unsecure&name=John`
. 按*enter*以从WS-Security应用程序中引发响应（请参阅下图）。 +
 +
image:first_response.png[first_response] +

 。调整网址以将`John`中的*name*更改为您的名称，然后按*enter*以从应用程序中引发新的响应。
. 将*clientType*参数从`unsecure`调整为以下五种类型中的任何一种（注意每种类型都区分大小写）：+
*  `usernameToken`
*  `usernameTokenSigned`
*  `usernameTokenEncrypted`
*  `samlToken`
*  `samlTokenSigned`
. 按*enter*从应用程序中引发新的响应（请参阅下面的示例）。 +
 +
image:second_response.png[second_response]

无论您用于提交请求的*clientType*，Mule都会返回相同的回复。 Mule用于处理消息的安全类型并未反映在消息的内容中，因此即使Mule以不同方式处理每个请求，响应的内容仍保持不变。

==== 备选设置

您可以通过Anypoint Studio内的*SecureClient* java类提交最终用户请求，而不是通过Web浏览器与应用程序交互。

. 完成 link:/mule-user-guide/v/3.5/mule-examples[程序]创建，然后在Anypoint Studio中运行安全模板，或在Mule Standalone（无Studio的Mule ESB）中运行安全示例。
. 在*Package Explorer*中，导航至`src/main/java`，然后展开`com.mulesoft.mule.example.security`文件夹以显示`SecureClient`文件。 +
 +
image:securitype.png[securitype] +

. 右键点击`SecureClient`文件，然后选择*Run As*> *Java Application*。
. 在*Console*中，Mule显示一个菜单，其中列出了可以提交给WS-Security应用程序的不同类型的请求。 +
 +
image:console.png[安慰] +

. 点击列表中最后一行`q. Quit`的下方，在控制台窗格中激活您的光标。
. 在最后一行下方键入`2`，然后按*enter*将带有用户名令牌安全性的请求提交给WS-Security应用程序。
.  Mule处理请求，并在控制台窗格中返回响应`Hello Mule`。 +
 +
image:response.png[响应] +

 。 Mule再次在控制台中显示请求提交选项的相同菜单。在最后一个列表项目下方键入另一个号码1-9，然后按*enter*。
.  Mule处理请求，并在控制台窗格中返回响应`Hello Mule`。
. 如果您希望终止Java应用程序，请键入`q`，然后按*enter*。 +

== 它是如何工作的

此示例应用程序由多个 link:/mule-user-guide/v/3.5/mule-application-architecture[流量和子流量]组成。这些流程中的每一个暴露了处理最终用户请求的相同Web服务的变体。这些流程之间唯一的区别在于每种应用的Web服务安全类型。

以下部分提供了WS-Security应用程序在处理最终用户请求时的操作的逐流描述。本文档中每个流程的Web服务变体比前一个流程更安全。

===  UnsecureService流

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:unsecureService.png[unsecureService]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<flow name="UnsecureServiceFlow" doc:name="UnsecureServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/unsecure" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Unsecure service"/>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service" />
    </flow>
----
....
------

当最终用户提交`unsecure`称呼请求时，Web服务客户端会将简单的SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UnsecureService*流。

[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Body>
        <ns2:greet xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>John</name>
        </ns2:greet>
    </soap:Body>
</soap:Envelope>
----

此流程中的请求 - 响应*{{0}}*接收最终用户请求。由于它具有双向消息交换模式，因此此HTTP端点负责接收和返回消息。

JAX-WS服务中，此流程中的*{{0}}*将根据其安全配置来评估消息。在这种情况下，Web服务是不安全的（请参阅下图），以便CXF组件处理它收到的所有请求。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:unsecuresoap.png[unsecuresoap]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source,xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Unsecure service"/> 
----
....
------

*{{0}}*执行一个简单的脚本为最终用户准备个性化的称呼。

[TIP]
====
*Where is the Java code?*

要访问*Anypoint Studio*中的Java代码，请导航到*Package Explorer*中的源文件。

*Find the Java:*
. 在您的WS-Security项目中，导航至`src/main/java`> `com.mulesoft.mule.example.security`。
. 双击`Greeter.java`文件，在Studio画布上的新标签中打开它（请参阅下图）。
+
image:greeter.png[招待员]
+
要访问*Mule Standalone*中的Java代码，请导航到本地驱动器上示例文件夹中的源文件。
+
. 导航到本地驱动器上的Mule Standalone文件夹。
. 导航到`examples`> `security`> `src` `main` `java` `com` { {8}}> `example`> `security`。
. 双击打开`Greeter.java`文件。
====

最后，HTTP端点向客户端返回一个简单的SOAP响应（见下文）。

[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Body>
        <ns2:greetResponse xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>Hello John</name>
        </ns2:greetResponse>
    </soap:Body>
</soap:Envelope>
----

===  UsernameTokenService流

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:usernameTokenService.png[usernameTokenService]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
</cxf:jaxws-service>
----
....
------

当最终用户提交`usernameToken`称呼请求时，Web服务客户端会将SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UsernameTokenService*流。

.SOAP请求消息：
[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Header>
        <wsse:Security xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                       xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
                       soap:mustUnderstand="1">
            <wsu:Timestamp wsu:Id="TS-2">
                <wsu:Created>2012-08-29T02:58:29.834Z</wsu:Created>
                <wsu:Expires>2012-08-29T03:03:29.834Z</wsu:Expires>
            </wsu:Timestamp>
            <wsse:UsernameToken wsu:Id="UsernameToken-1">
                <wsse:Username>joe</wsse:Username>
                <wsse:Password
                        Type="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#PasswordDigest">
                    q0JPIhBbzqsE7dz71CoUjzBJbxs=
                </wsse:Password>
                <wsse:Nonce
                        EncodingType="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary">
                    hdSN3eeqCZxr4huNcRTG+A==
                </wsse:Nonce>
                <wsu:Created>2012-08-29T02:58:29.831Z</wsu:Created>
            </wsse:UsernameToken>
        </wsse:Security>
    </soap:Header>
    <soap:Body>
        <ns2:greet xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>John</name>
        </ns2:greet>
    </soap:Body>
</soap:Envelope>
----

与UnsecureService流程一样，此流程使用HTTP端点接收请求，并使用CXF组件处理消息。但是，在这种情况下，CXF组件的配置指定了*action*，这是Mule验证消息的WS安全功能列表。该组件的UsernameToken规范验证以下内容：

* 用户名和密码 - 确认客户的用户名和密码有效
* 时间戳 - 验证邮件是不是陈旧

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:soap2.png[soap2]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
</cxf:jaxws-service>
----
....
------

[NOTE]
====
*Username and password?*

为演示一个功能性示例，WS-Security应用程序包括几个向*server-side flows*提供安全信息的*client-side flows*。

通常，独立Web服务客户端向Web服务提供者提供最终用户安全信息，例如*username*和*password*。但是，在这种情况下，Mule会在其*service-clients*流中生成此信息来模拟安全的请求提交。

有关更多详细信息，请参阅下面的<<Client-Side Flows>>部分。
====

接下来，Java组件执行一个简单的脚本为最终用户准备个性化的称呼。最后，HTTP端点向客户端返回一个简单的SOAP响应。

===  UsernameTokenSignedService流

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:usernameTokenSigned.png[usernameTokenSigned]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<flow name="UsernameTokenSignedServiceFlow" doc:name="UsernameTokenSignedServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/signed" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
</flow>
----
....
------

该流程验证消息的数字签名。带有数字签名的消息（除用户名，密码和时间戳外）比没有消息时更安全。

当最终用户提交`usernameTokenSigned`称呼请求时，Web服务客户端会将SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UsernameTokenSignedService*流。

.SOAP请求消息：
[source, xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Header>
        <wsse:Security xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                       xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
                       soap:mustUnderstand="1">
            <wsu:Timestamp wsu:Id="TS-12">
                <wsu:Created>2012-08-29T03:24:26.100Z</wsu:Created>
                <wsu:Expires>2012-08-29T03:29:26.100Z</wsu:Expires>
            </wsu:Timestamp>
            <ds:Signature xmlns:ds="http://www.w3.org/2000/09/xmldsig#" Id="SIG-11">
                <ds:SignedInfo>
                    <ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#">
                        <ec:InclusiveNamespaces xmlns:ec="http://www.w3.org/2001/10/xml-exc-c14n#" PrefixList="soap"/>
                    </ds:CanonicalizationMethod>
                    <ds:SignatureMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/>
                    <ds:Reference URI="#id-10">
                        <ds:Transforms>
                            <ds:Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#">
                                <ec:InclusiveNamespaces xmlns:ec="http://www.w3.org/2001/10/xml-exc-c14n#"
                                                        PrefixList=""/>
                            </ds:Transform>
                        </ds:Transforms>
                        <ds:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/>
                        <ds:DigestValue>CPmeTSkR/UjaGQfTqNLXHQXOPGU=</ds:DigestValue>
                    </ds:Reference>
                </ds:SignedInfo>
                <ds:SignatureValue>Tjdon+T59I9YMI+hDwXWHWT1mIwf0LS1ZpzB57KB3aM7+XebbHKtKjbEnughtDDHEW7gfAvcBS9H
                    goXeqI8lCu7HqRixX0LPrkpUKW1FUbjl0zQLOrI1quPS557TABKpfEKbu1wwoZQTyVOWjs1+R8qU
                    CXsJsT+iL4UVQrbMVNg=
                </ds:SignatureValue>
                <ds:KeyInfo Id="KI-E847A979F41D3E818513462106660948">
                    <wsse:SecurityTokenReference wsu:Id="STR-E847A979F41D3E818513462106660949">
                        <ds:X509Data>
                            <ds:X509IssuerSerial>
                                <ds:X509IssuerName>CN=joe,OU=joe,O=joe,L=joe,ST=joe,C=US</ds:X509IssuerName>
                                <ds:X509SerialNumber>1262035674</ds:X509SerialNumber>
                            </ds:X509IssuerSerial>
                        </ds:X509Data>
                    </wsse:SecurityTokenReference>
                </ds:KeyInfo>
            </ds:Signature>
            <wsse:UsernameToken wsu:Id="UsernameToken-9">
                <wsse:Username>joe</wsse:Username>
                <wsse:Password
                        Type="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#PasswordDigest">
                    vzL3k/289R5JFREMIFBPAyDbe6c=
                </wsse:Password>
                <wsse:Nonce
                        EncodingType="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary">
                    I+dSbnJQoYzktN+RuF8DLQ==
                </wsse:Nonce>
                <wsu:Created>2012-08-29T03:24:26.093Z</wsu:Created>
            </wsse:UsernameToken>
        </wsse:Security>
    </soap:Header>
    <soap:Body xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
               wsu:Id="id-10">
        <ns2:greet xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>John</name>
        </ns2:greet>
    </soap:Body>
</soap:Envelope>
----

*UsernameTokenService*和*UsernameTokenSignedService*流程唯一的区别在于CXF组件的配置。在这个流程中，组件包括一个签名动作*signaturePropFile*（见下图），Mule用它来验证数字签名。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:soap3.png[soap3]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source,xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
</cxf:jaxws-service>
----
....
------

*signaturePropFile*属性指定Mule必须验证消息上的数字签名的密钥库。包含安全证书的存储库*keystore*驻留在应用程序中嵌入的*wssecurity.properties*文件中。

[NOTE]
====
*Where is the wssecurity.properties File?*

要在Studio中访问*wssecurity.properties*文件，请导航至*Package Explorer*中的源文件。

. 在您的WS-Security项目中，导航到`src/main/resources`。
. 双击`wssecurity.properties`文件，在Studio画布上的新标签中打开它（请参阅下图）。 +
 +
image:ws_security_properties.png[ws_security_properties]
====

*wssecurity.properties*文件包含以下属性：

*  `org.apache.ws.security.crypto.merlin.file=keystore.jks`
*  `org.apache.ws.security.crypto.merlin.keystore.password=keyStorePassword`

为了验证数字签名，Mule使用Java keytool命令来验证密钥库中是否存在用户`joe`的证书（请参阅下图）。 +
+
image:keystore.png[密钥库]

[NOTE]
请注意，此示例证书是自签名的（即`Owner`和`Issuer`是同一个实体）。通常，受信任的第三方`Issuer`（例如VeriSign）颁发证书。

===  UsernameTokenEncryptedService流

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:UsernameTokenEncrypted.png[UsernameTokenEncrypted]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<flow name="UsernameTokenEncryptedServiceFlow" doc:name="UsernameTokenEncryptedServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/encrypted" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Encrypted service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp Encrypt"/>
                    <cxf:property key="decryptionPropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
</flow>
----
....
------

在前面的流程中，SOAP消息的头部包含了所有消息的安全信息，消息的主体是完全透明的。该流程不仅使用SOAP头中的所有安全信息验证所有消息，还解密消息正文中的加密内容。具有加密主体的消息比具有未加密内容的消息更安全。

当最终用户提交`usernameTokenEncrypted`称呼请求时，Web服务客户端会将SOAP请求消息（请参见下文）发送到WS-Security应用程序中的*UsernameTokenEncryptedService*流。

.SOAP请求消息：
[source, xml, linenums]
----
<soap:Body>
        <xenc:EncryptedData xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" Id="ED-15"
                            Type="http://www.w3.org/2001/04/xmlenc#Content">
            <xenc:EncryptionMethod xmlns:xenc="http://www.w3.org/2001/04/xmlenc#"
                                   Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc"/>
            <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
                <wsse:SecurityTokenReference
                        xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                        xmlns:wsse11="http://docs.oasis-open.org/wss/oasis-wss-wssecurity-secext-1.1.xsd"
                        wsse11:TokenType="http://docs.oasis-open.org/wss/oasis-wss-soap-message-security-1.1#EncryptedKey">
                    <wsse:Reference URI="#EK-E847A979F41D3E8185134621148888310"/>
                </wsse:SecurityTokenReference>
            </ds:KeyInfo>
            <xenc:CipherData xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
                <xenc:CipherValue xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
                    LcdVnOdPMSLvqSvqWZxojAT9MKDs5Qq2MmXafeqIb+h8LYQFvXV0Und2E6eyXp+ZxYVz+E3UdfEH
                    BvsbguT8y4MelnAagYGJl6MushFPOQ0ZRr0ZiuOkLbJlMloFFWz6jDEWekLngm84uAKu1vy37PMW
                    fXBkWFWC30fjVXk3pW8mkDXShiWaI+0a1j9qCJJMg81UwtI1xV0+0DSxs7wyQXLNjdc8ixfqLahW
                    y4wZR9g=
                </xenc:CipherValue>
            </xenc:CipherData>
        </xenc:EncryptedData>
</soap:Body>
----

在此流程中，CXF组件必须在解密SOAP消息正文之前验证用户名，密码，时间戳和数字签名。 Mule使用密钥库来执行解密。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:soap4.png[soap4]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Encrypted service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp Encrypt"/>
                    <cxf:property key="decryptionPropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
</cxf:jaxws-service>
----
....
------

*signaturePropFile*属性指定Mule用来执行两项任务的密钥库：

. 验证消息上的数字签名
. 解密SOAP消息的正文

[NOTE]
====
*How is the Message Body Encrypted?*

为演示一个功能性示例，WS-Security应用程序包括几个向*server-side flows*提供安全信息的*client-side flows*。

客户端*usernameTokenEncrypted*子流中的*CXF Component*对SOAP消息的主体进行加密（参见下图）。

image:subflow2.png[subflow2]

image:2encrypt.png[2encrypt]

有关更多详细信息，请参阅下面的<<Client-Side Flows>>部分。
====

===  SAMLTokenService流程

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:samlToken.png[samlToken]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source,xml, linenums]
----
<flow name="SamlTokenServiceFlow" doc:name="SamlTokenServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/saml" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Timestamp"/>
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
</flow>
----
....
------

此流程使用`SAMLTokenUnsigned`时间戳记操作来验证 http://en.wikipedia.org/wiki/SAML_2.0[SAML2]断言。 Web服务使用安全声明标记语言（SAML）来管理 http://saml.xml.org/web-sso[单一登录]（SSO）身份验证。假设外部资源已经验证了用户确认的用户名和密码，例如，消息的SOAP头中的SAML令牌包含一个或多个*subjects*以确认原始验证者是可信的。 SAML为Web服务提供了两种不同的方法来衡量邮件发件人的可信度。

.  *Sender Vouches*  - 消息_sender_必须向Web服务证明它是值得信赖的。例如，发件人在邮件的SOAP标头中包含真实性主题，或者提供数字签名以证明其身份和可信性。
.  *Holder of Key*  - 邮件_receiver_必须确认发件人的可信度。为此，它要求消息包含一个SAML令牌主题，该主题又包含来自可信来源的密钥（例如，来自VeriSign的X.509证书）。

[TIP]
有关*SAML*的更多信息，请参阅 http://saml.xml.org/wiki/saml-wiki-knowledgebase[saml.xml.org知识库]。

当最终用户提交`samlTokenSigned`称谓请求时，Web服务客户端会向WS安全应用程序中的*SignedSAMLTokenService*流发送SOAP请求消息（请参见下文）。

.SOAP请求消息：
[source,xml, linenums]
----
<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/">
    <soap:Header>
        <wsse:Security xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                       xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
                       soap:mustUnderstand="1">
            <wsu:Timestamp wsu:Id="TS-16">
                <wsu:Created>2012-08-29T03:57:49.098Z</wsu:Created>
                <wsu:Expires>2012-08-29T04:02:49.098Z</wsu:Expires>
            </wsu:Timestamp>
            <saml2:Assertion xmlns:saml2="urn:oasis:names:tc:SAML:2.0:assertion"
                             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                             ID="_E847A979F41D3E8185134621266899411" IssueInstant="2012-08-29T03:57:49.004Z"
                             Version="2.0" xsi:type="saml2:AssertionType">
                <saml2:Issuer>self</saml2:Issuer>
                <saml2:Subject>
                    <saml2:NameID Format="urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified"
                                  NameQualifier="www.example.com">AllowGreetingServices
                    </saml2:NameID>
                    <saml2:SubjectConfirmation Method="urn:oasis:names:tc:SAML:2.0:cm:sender-vouches"/>
                </saml2:Subject>
                <saml2:Conditions NotBefore="2012-08-29T03:57:49.090Z" NotOnOrAfter="2012-08-29T04:02:49.090Z"/>
                <saml2:AuthnStatement>
                    <saml2:AuthnContext>
                        <saml2:AuthnContextClassRef>urn:oasis:names:tc:SAML:2.0:ac:classes:Password
                        </saml2:AuthnContextClassRef>
                    </saml2:AuthnContext>
                </saml2:AuthnStatement>
            </saml2:Assertion>
        </wsse:Security>
    </soap:Header>
    <soap:Body>
        <ns2:greet xmlns:ns2="http://security.example.mule.mulesoft.com/">
            <name>John</name>
        </ns2:greet>
    </soap:Body>
</soap:Envelope>
----

在此流程中，CXF组件使用*Sender Vouches*方法确认邮件发件人的可信度。 `SAMLTokenUnsigned Timestamp`操作确保Web服务仅处理包含有效主题的邮件。

CXF组件不是执行所有安全验证本身，而是将验证委托给其他元素。

在此示例中，CXF组件将验证SAML令牌的杂项委托给SAML2令牌验证程序。 （在Studio中，选中的*SAML 2*框表示此委派。）SAML2令牌验证程序引用配置为Spring bean的*custom SAML2 token validator*（请参见下文左侧），以确定如何验证SAML令牌。 `samlCustomValidator` bean使用Java类`com.mulesoft.mule.example.security.SAMLCustomValidator`来确认SAML主题的内容是否正确（请参阅下面的Java代码）。在这种情况下，Mule验证主题的`NameID`是`AllowGreetingService`。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:samldelegate.png[samldelegate]

image:samlge.png[samlge]
....
[tab,title="Studio XML Editor"]
....
[source,xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Timestamp"/>
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
</cxf:jaxws-service>
----
....
------

.Java类：
[source, java, linenums]
----
public class SAMLCustomValidator extends SamlAssertionValidator
{
    @Override
    public Credential validate(Credential credential, RequestData data) throws WSSecurityException
    {
        Credential returnedCredential = super.validate(credential, data);
        //
        // Do some custom validation on the assertion
        //
        AssertionWrapper assertion = credential.getAssertion();
        if (!"self".equals(assertion.getIssuerString()))
        {
            throw new WSSecurityException(WSSecurityException.FAILURE, "invalidSAMLsecurity");
        }
 
        if (assertion.getSaml2() == null)
        {
            throw new WSSecurityException(WSSecurityException.FAILURE, "invalidSAMLsecurity");
        }
 
        String confirmationMethod = assertion.getConfirmationMethods().get(0);
        if (confirmationMethod == null)
        {
            throw new WSSecurityException(WSSecurityException.FAILURE, "invalidSAMLsecurity");
        }
        if (!OpenSAMLUtil.isMethodSenderVouches(confirmationMethod))
        {
            throw new WSSecurityException(WSSecurityException.FAILURE, "invalidSAMLsecurity");
        }
 
        if(!"AllowGreetingServices".equals(assertion.getSaml2().getSubject().getNameID().getValue()))
        {
            throw new WSSecurityException(WSSecurityException.FAILURE, "invalidSAMLsecurity");
        }
 
        return returnedCredential;
    }
}
----


[TIP]
====
*For Mule Studio Users*

要访问Studio中的*SAMLCustomValidator* Java类，请导航到*Package Explorer*中的源文件。

. 在您的WS-Security项目中，导航至`src/main/java`> `com.mulesoft.mule.example.security`。
. 双击`SAMLCustomValidator.java`文件，在Studio画布上的新标签中打开它（请参阅下图）。

image:SAMLCustomValidator.png[SAMLCustomValidator]
====

[NOTE]
====
*How Does the Web Service Client Send a SAML2 Assertion?*

为演示一个功能性示例，WS-Security应用程序包括几个向*server-side flows*提供安全信息的*client-side flows*。

客户端*samlToken*子流中的*CXF Component*使用SAMLCallbackHandler（请参阅此框下方的Java代码）来填充它发送给Web Service的断言。 （见下图）。

image:saml7.png[saml7]
====

.SAMLCallbackHandler类：
[source,java, linenums]
----
package com.mulesoft.mule.example.security;
 
import java.io.IOException;
import java.util.Collections;
 
import javax.security.auth.callback.Callback;
import javax.security.auth.callback.CallbackHandler;
import javax.security.auth.callback.UnsupportedCallbackException;
 
import org.apache.ws.security.saml.ext.SAMLCallback;
import org.apache.ws.security.saml.ext.bean.AuthenticationStatementBean;
import org.apache.ws.security.saml.ext.bean.SubjectBean;
import org.apache.ws.security.saml.ext.builder.SAML2Constants;
import org.opensaml.common.SAMLVersion;
 
/**
 *  Callback handler that populates a SAML 2.0 assertion based on the SAML properties file
 */
public class SAMLCallbackHandler implements CallbackHandler {
 
    private String subjectName;
    private String subjectQualifier;
    private String confirmationMethod;
 
    public SAMLCallbackHandler()
    {
        subjectName = "AllowGreetingServices";
        subjectQualifier = "www.example.com";
        confirmationMethod = SAML2Constants.CONF_SENDER_VOUCHES;
    }
 
    public void handle(Callback[] callbacks)
            throws IOException, UnsupportedCallbackException
    {
        for (int i = 0; i < callbacks.length; i++) {
            if (callbacks[i] instanceof SAMLCallback) {
                SAMLCallback callback = (SAMLCallback) callbacks[i];
                callback.setSamlVersion(SAMLVersion.VERSION_20);
                SubjectBean subjectBean =
                        new SubjectBean(
                                subjectName, subjectQualifier, confirmationMethod
                        );
                callback.setSubject(subjectBean);
                createAndSetStatement(null, callback);
            } else {
                throw new UnsupportedCallbackException(callbacks[i], "Unrecognized Callback");
            }
        }
    }
 
    private void createAndSetStatement(SubjectBean subjectBean, SAMLCallback callback) {
        AuthenticationStatementBean authBean = new AuthenticationStatementBean();
        if (subjectBean != null) {
            authBean.setSubject(subjectBean);
        }
        authBean.setAuthenticationMethod("Password");
        callback.setAuthenticationStatementData(Collections.singletonList(authBean));
    }
 
}
----

有关更多详细信息，请参阅下面的<<Client-Side Flows>>部分。

===  SignedSAMLTokenService流

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:signedSamlToken.png[signedSamlToken]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, xml, linenums]
----
<flow name="SignedSamlTokenServiceFlow" doc:name="SignedSamlTokenServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/signedsaml" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Signature"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties" />
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
</flow>
----
....
------

与<<SAMLTokenService Flow>>非常相似，此流程使用`SAMLTokenUnsigned`操作来验证SAML2断言。但是，此流程中的操作使用数字签名来验证原始验证者的可信度。为了验证消息上的数字签名，CXF组件使用在*signaturePropFile*中指定的密钥库。 （有关验证数字签名的更多信息，请参阅上面的<<UsernameTokenEncryptedService Flow>>部分。）

当最终用户提交`samlTokenSigned`称谓请求时，Web服务客户端会向WS安全应用程序中的*SignedSAMLTokenService*流发送SOAP请求消息（请参见下文）。

.SOAP请求消息：
[source,xml, linenums]
----
<soap:Header>
        <wsse:Security xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd"
                       xmlns:wsu="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd"
                       soap:mustUnderstand="1">
            <wsse:BinarySecurityToken
                    EncodingType="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary"
                    ValueType="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509v3"
                    wsu:Id="CertId-E847A979F41D3E8185134621375247815">
                MIICGDCCAYECBEs5ItowDQYJKoZIhvcNAQEEBQAwUzELMAkGA1UEBhMCVVMxDDAKBgNVBAgTA2pvZTEMMAoGA1UEBxMDam9lMQwwCgYDVQQKEwNqb2UxDDAKBgNVBAsTA2pvZTEMMAoGA1UEAxMDam9lMB4XDTA5MTIyODIxMjc1NFoXDTI5MDIyNjIxMjc1NFowUzELMAkGA1UEBhMCVVMxDDAKBgNVBAgTA2pvZTEMMAoGA1UEBxMDam9lMQwwCgYDVQQKEwNqb2UxDDAKBgNVBAsTA2pvZTEMMAoGA1UEAxMDam9lMIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCXTdHZyVwHGUTW3F0pLyP8dFT3b2ItMt1Nu5PKOmD0OmSBEZGmNRcZzYABWKnfJLVeBqr+At5mMYFqA4KX6W/WXnNDFz3xIgT5zjpcx3OIBStS/qbs3Qf7HbgEHAJce9qVHowB7vJP+dTsTJYCC7Zlpo/Uv4yl0oararXDI/S7QQIDAQABMA0GCSqGSIb3DQEBBAUAA4GBABLKNtAhloYg+YksqvMNToo1NwtE/k28314NKIGdxmFn+baCV20zvtRkmHCDL5HO4lGTePze3btNdScUiLmUKIlMRSRIVxLMC6dmkzdlfCIg4+qvsAxQO23LIeOhujP2iqcHyD9GTUgL47hu9UJOu1Fk9ZnCHsK+LsbHogv5UrcI
            </wsse:BinarySecurityToken>
            <saml2:Assertion xmlns:saml2="urn:oasis:names:tc:SAML:2.0:assertion"
                             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                             ID="_E847A979F41D3E8185134621375247212" IssueInstant="2012-08-29T04:15:52.472Z"
                             Version="2.0" xsi:type="saml2:AssertionType">
                <saml2:Issuer>self</saml2:Issuer>
                <saml2:Subject>
                    <saml2:NameID Format="urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified"
                                  NameQualifier="www.example.com">AllowGreetingServices
                    </saml2:NameID>
                    <saml2:SubjectConfirmation Method="urn:oasis:names:tc:SAML:2.0:cm:sender-vouches"/>
                </saml2:Subject>
                <saml2:Conditions NotBefore="2012-08-29T04:15:52.472Z" NotOnOrAfter="2012-08-29T04:20:52.472Z"/>
                <saml2:AuthnStatement>
                    <saml2:AuthnContext>
                        <saml2:AuthnContextClassRef>urn:oasis:names:tc:SAML:2.0:ac:classes:Password
                        </saml2:AuthnContextClassRef>
                    </saml2:AuthnContext>
                </saml2:AuthnStatement>
            </saml2:Assertion>
            <wsse:SecurityTokenReference
                    xmlns:wsse11="http://docs.oasis-open.org/wss/oasis-wss-wssecurity-secext-1.1.xsd"
                    wsse11:TokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV2.0"
                    wsu:Id="STRSAMLId-E847A979F41D3E8185134621375247816">
                <wsse:KeyIdentifier ValueType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLID">
                    _E847A979F41D3E8185134621375247212
                </wsse:KeyIdentifier>
            </wsse:SecurityTokenReference>
            <ds:Signature xmlns:ds="http://www.w3.org/2000/09/xmldsig#" Id="SIG-18">
                <ds:SignedInfo>
                    <ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#">
                        <ec:InclusiveNamespaces xmlns:ec="http://www.w3.org/2001/10/xml-exc-c14n#" PrefixList="soap"/>
                    </ds:CanonicalizationMethod>
                    <ds:SignatureMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/>
                    <ds:Reference URI="#id-17">
                        <ds:Transforms>
                            <ds:Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#">
                                <ec:InclusiveNamespaces xmlns:ec="http://www.w3.org/2001/10/xml-exc-c14n#"
                                                        PrefixList=""/>
                            </ds:Transform>
                        </ds:Transforms>
                        <ds:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/>
                        <ds:DigestValue>l2yyoEpr7OkUX8J6RNTEPVjxAfU=</ds:DigestValue>
                    </ds:Reference>
                    <ds:Reference URI="#STRSAMLId-E847A979F41D3E8185134621375247816">
                        <ds:Transforms>
                            <ds:Transform
                                    Algorithm="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#STR-Transform">
                                <wsse:TransformationParameters>
                                    <ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/>
                                </wsse:TransformationParameters>
                            </ds:Transform>
                        </ds:Transforms>
                        <ds:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/>
                        <ds:DigestValue>rA4vUTJHRh5zS7XO/qzD6rdjG38=</ds:DigestValue>
                    </ds:Reference>
                </ds:SignedInfo>
                <ds:SignatureValue>EGQFUSCuRgLPY7Mny5acRRadnRnxH+ZnF5fBsADfsA+G/qG4ZxCUVRSyvbJ6D53IDAZ0JnEq2wzt
                    bGaHWDdI/R20fACt1Q7bUBAIRXFHXrYNjGWEBu6Dw9pmxz9GF1OO0VzvSCWRkpiMWGCfmVFdz4Hn
                    gq6PUghSBHwD2dfP7fk=
                </ds:SignatureValue>
                <ds:KeyInfo Id="KeyId-E847A979F41D3E8185134621375247813">
                    <wsse:SecurityTokenReference wsu:Id="STRId-E847A979F41D3E8185134621375247814">
                        <wsse:Reference URI="#CertId-E847A979F41D3E8185134621375247815"
                                        ValueType="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509v3"/>
                    </wsse:SecurityTokenReference>
                </ds:KeyInfo>
            </ds:Signature>
        </wsse:Security>
</soap:Header>
----

在*SAMLTokenService*流处理_unsigned_ messages  -  SOAP标头中没有来自原始认证者的数字签名的消息的情况下，此流处理_signed_消息。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:signature.png[signature]
....
[tab,title="Studio XML or Standalone"]
....
[source,xml, linenums]
----
<cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken Signed service">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Signature"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties" />
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
</cxf:jaxws-service>
----
....
------

与<<SAMLTokenService Flow>>一样，CXF组件将SAML令牌验证委托给SAML2令牌验证器。令牌验证程序反过来引用自定义的SAML2令牌验证程序。 `samlCustomValidator`使用Java类来确认SAML主题的内容是否正确。此外，此CXF组件还会根据`wssecurity.properties`文件中的密钥库验证消息的原始验证器的数字签名。

== 客户端流程

本示例应用程序包括使应用程序能够运行的客户端配置。 WS-Security应用程序中的*service-clients*流由一个流和几个子流组成，这些子流便于客户端向服务器端提交。

image:client-server_diagram.png[客户server_diagram]

双击包资源管理器中的`service-clients.mflow`文件，以在Anypoint Studio的单独选项卡中打开*service-clients*配置。

客户端子流包含不同种类的客户端安全信息，这使Mule能够成功处理服务器端的请求。例如，客户端*usernameToken*子流包含服务器端*UsernameTokenService*验证消息的最终用户安全信息。它设置UsernameToken和Timestamp操作，提供用户，并依靠密码回调类（见下文）提供用户密码。

。回叫级别：
[source, java, linenums]
----
public class PasswordCallback implements CallbackHandler
{
    public void handle(Callback[] callbacks) 
    {
        ...cut...
        if (pc.getIdentifier().equals("joe"))
        {
            pc.setPassword("secret");
        }
    ...
----

如果没有客户端服务，就没有机制将请求提交给示例应用程序的服务器端。 Ergo，这些客户端服务用于模拟最终用户可能提交给Web服务的各种实际请求。

。客户端XML：
[source,xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule version="EE-3.5.0" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:core="http://www.mulesoft.org/schema/mule/core" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd  http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd  http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd  http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd  http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd ">
    <spring:beans>
        <spring:bean class="com.mulesoft.mule.example.security.SAMLCallbackHandler" id="samlCallbackHandler" name="samlCallbackHandler"/>
    </spring:beans>
    <flow doc:name="SecurityClients" name="SecurityClients">
        <http:inbound-endpoint doc:name="HTTP Inbound Endpoint" exchange-pattern="request-response" host="localhost" path="client" port="63080"/>
        <set-payload doc:name="Set payload with 'name' query param" value="#[message.inboundProperties.'http.query.params'.name]"/>
        <set-variable doc:name="Set clientType" value="#[message.inboundProperties.'http.query.params'.clientType]" variableName="clientType"/>
        <choice doc:name="Choice">
            <when expression="#[clientType == 'unsecure']">
                <flow-ref doc:name="Invoke unsecure sub-flow" name="unsecure"/>
            </when>
            <when expression="#[clientType == 'usernameToken']">
                <flow-ref doc:name="Invoke usernameToken sub-flow" name="usernameToken"/>
            </when>
            <when expression="#[clientType == 'usernameTokenSigned']">
                <flow-ref doc:name="Invoke usernameToken Signed sub-flow" name="usernameTokenSigned"/>
            </when>
            <when expression="#[clientType == 'usernameTokenEncrypted']">
                <flow-ref doc:name="Invoke usernameToken Encrypted sub-flow" name="usernameTokenEncrypted"/>
            </when>
            <when expression="#[clientType == 'samlToken']">
                <flow-ref doc:name="Invoke samlToken sub-flow" name="samlToken"/>
            </when>
            <when expression="#[clientType == 'samlTokenSigned']">
                <flow-ref doc:name="Invoke samlToken Signed sub-flow" name="samlTokenSigned"/>
            </when>
            <otherwise>
                <set-payload doc:name="Client type is not supported" value="Client type is not supported"/>
            </otherwise>
        </choice>
        <set-property doc:name="Set response Content-Type" propertyName="Content-Type" value="text/plain"/>
        <catch-exception-strategy doc:name="Catch Exception Strategy">
            <set-payload doc:name="Set Payload" value="There has been an Error processing the request"/>
            <set-property doc:name="Set response Content-Type" propertyName="Content-Type" value="text/plain"/>
        </catch-exception-strategy>
    </flow>
    <sub-flow doc:name="unsecure" name="unsecure">
        <cxf:jaxws-client doc:description="Unsecure SOAP client" doc:name="Unsecure SOAP client" operation="greet" serviceClass="com.mulesoft.mule.example.security.Greeter"/>
        <http:outbound-endpoint doc:name="Invoke unsecure Web Service" exchange-pattern="request-response" host="localhost" path="services/unsecure" port="63081"/>
    </sub-flow>
    <sub-flow doc:name="usernameToken" name="usernameToken">
        <cxf:jaxws-client doc:name="UsernameToken SOAP client" operation="greet" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
                    <cxf:property key="user" value="joe"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-client>
        <http:outbound-endpoint doc:name="Invoke usernameToken Web Service" exchange-pattern="request-response" host="localhost" path="services/username" port="63081"/>
    </sub-flow>
    <sub-flow doc:name="usernameTokenSigned" name="usernameTokenSigned">
        <cxf:jaxws-client doc:name="UsernameToken Signed SOAP client" operation="greet" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                    <cxf:property key="user" value="joe"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-client>
        <http:outbound-endpoint doc:name="Invoke usernameToken Signed Web Service" exchange-pattern="request-response" host="localhost" path="services/signed" port="63081"/>
    </sub-flow>
    <sub-flow doc:name="usernameTokenEncrypted" name="usernameTokenEncrypted">
        <cxf:jaxws-client doc:name="UsernameToken Encrypted SOAP client" operation="greet" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp Encrypt"/>
                    <cxf:property key="encryptionPropFile" value="wssecurity.properties"/>
                    <cxf:property key="user" value="joe"/>
                    <cxf:property key="encryptionUser" value="joe"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-client>
        <http:outbound-endpoint doc:name="Invoke usernameToken Encrypted Web Service" exchange-pattern="request-response" host="localhost" path="services/encrypted" port="63081"/>
    </sub-flow>
    <sub-flow doc:name="samlToken" name="samlToken">
        <cxf:jaxws-client doc:name="SAMLToken SOAP client" operation="greet" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Timestamp"/>
                    <cxf:property key="samlPropFile" value="saml.properties"/>
                    <cxf:property key="samlCallbackClass" value="com.mulesoft.mule.example.security.SAMLCallbackHandler"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-client>
        <http:outbound-endpoint doc:name="Invoke SAMLToken Web Service" exchange-pattern="request-response" host="localhost" path="services/saml" port="63081"/>
    </sub-flow>
    <sub-flow doc:name="samlTokenSigned" name="samlTokenSigned">
        <cxf:jaxws-client doc:name="SAMLToken Signed SOAP client" operation="greet" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenSigned"/>
                    <cxf:property key="samlPropFile" value="saml.properties"/>
                    <cxf:property key="signatureKeyIdentifier" value="DirectReference"/>
                    <cxf:property key="user" value="joe"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                    <cxf:property key="samlCallbackClass" value="com.mulesoft.mule.example.security.SAMLCallbackHandler"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-client>
        <http:outbound-endpoint doc:name="Invoke SAMLToken Signed Web Service" exchange-pattern="request-response" host="localhost" path="services/signedsaml" port="63081"/>
    </sub-flow>
</mule>
----

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:ws-security.png[ws-security]
....
[tab,title="Studio XML Editor"]
....
[source,xml, linenums]
----
<?xml version="1.0"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:core="http://www.mulesoft.org/schema/mule/core" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd  http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd  http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd  http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd ">
    <spring:beans>
        <spring:bean class="com.mulesoft.mule.example.security.SAMLCustomValidator" id="Bean" name="samlCustomValidator"/>
    </spring:beans>
    <flow doc:name="UnsecureServiceFlow" name="UnsecureServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/unsecure" doc:name="HTTP Inbound Endpoint" exchange-pattern="request-response"/>
        <cxf:jaxws-service doc:name="Unsecure service" serviceClass="com.mulesoft.mule.example.security.Greeter"/>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
    <flow doc:name="UsernameTokenServiceFlow" name="UsernameTokenServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/username" doc:name="HTTP Inbound Endpoint" exchange-pattern="request-response"/>
        <cxf:jaxws-service doc:name="Secure UsernameToken service" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
    <flow doc:name="UsernameTokenSignedServiceFlow" name="UsernameTokenSignedServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/signed" doc:name="HTTP Inbound Endpoint" exchange-pattern="request-response"/>
        <cxf:jaxws-service doc:name="Secure UsernameToken Signed service" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
    <flow doc:name="UsernameTokenEncryptedServiceFlow" name="UsernameTokenEncryptedServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/encrypted" doc:name="HTTP Inbound Endpoint" exchange-pattern="request-response"/>
        <cxf:jaxws-service doc:name="Secure UsernameToken Encrypted service" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="UsernameToken Timestamp Encrypt"/>
                    <cxf:property key="decryptionPropFile" value="wssecurity.properties"/>
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
                </cxf:ws-config>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
    <flow doc:name="SamlTokenServiceFlow" name="SamlTokenServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/saml" doc:name="HTTP Inbound Endpoint" exchange-pattern="request-response"/>
        <cxf:jaxws-service doc:name="Secure SAMLToken service" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Timestamp"/>
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
    <flow doc:name="SignedSamlTokenServiceFlow" name="SignedSamlTokenServiceFlow">
        <http:inbound-endpoint address="http://localhost:63081/services/signedsaml" doc:name="HTTP Inbound Endpoint" exchange-pattern="request-response"/>
        <cxf:jaxws-service doc:name="Secure SAMLToken Signed service" serviceClass="com.mulesoft.mule.example.security.Greeter">
            <cxf:ws-security>
                <cxf:ws-config>
                    <cxf:property key="action" value="SAMLTokenUnsigned Signature"/>
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
                </cxf:ws-config>
                <cxf:ws-custom-validator>
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
                </cxf:ws-custom-validator>
            </cxf:ws-security>
        </cxf:jaxws-service>
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
    </flow>
</mule>
----
....
------

== 签名密钥标识符

定义用于签名的关键标识符类型。这是一个字符串值，用XML signatureKeyIdentifier元素指定。有关每个值的更多信息，请参阅`+http://coheigea.blogspot.com/2013/03/signature-and-encryption-key.html+`。

可能的值是：

*  DirectReference
*  EmbeddedKeyName
*  EncryptedKeySHA1
*  IssuerSerial
*  SKIKeyIdentifier
* 指纹
*  X509KeyIdentifier

== 另请参阅

* 有关SOAP组件的更多信息，请参阅 link:/mule-user-guide/v/3.5/cxf-component-reference[CXF组件参考]。
* 有关WS安全性的更多信息，请参阅 link:/mule-user-guide/v/3.5/enabling-ws-security[启用WS-Security]。
